fix: fixed bug where text was unseeable when editing a to-do on dark mode, added instructions, gave Add button margin, changed drag state colors for to-do areas

--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -45,7 +45,7 @@
   }
   
   .container {
-    width: 95%;
+    width: 96%;
     display: flex;
     margin-top: 20px;
     justify-content: space-between;
@@ -63,7 +63,7 @@
   }
   
   .dragactive {
-    background-color: rgb(0, 221, 236);
+    background-color: gold;
   }
 
   .draginprog {
@@ -71,7 +71,7 @@
   }
   
   .dragcomplete {
-    background-color: rgb(255, 38, 0);
+    background-color: green;
   }
   
   .remove {
@@ -89,7 +89,7 @@
     border-radius: 5px;
     padding: 20px;
     margin-top: 15px;
-    background-image: url("https://img.freepik.com/free-photo/crumpled-yellow-paper-background-close-up_60487-2390.jpg?size=626&ext=jpg");
+    background-color: lightslategray;
     transition: 0.2s;
   }
   
@@ -107,6 +107,7 @@
     padding: 5px;
     border: none;
     font-size: 20px;
+    color: black
   }
   
   .todos__single--text:focus {
